# inferno

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
docs/: stage-00-naive-generation.md
inferno/: config.py  generate.py  loader.py  model.py
scripts/: bench_stage0.py  generate.py  verify_vs_hf.py
