[project]
name = "inferno"
version = "0.0.0"
description = "An LLM inference engine built from scratch, one idea at a time"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "safetensors",
    "tokenizers",
    "huggingface_hub",
]

[project.optional-dependencies]
# Only needed to verify our implementation against the reference, never at runtime.
verify = ["transformers"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["inferno"]
